added new projects

--- a/Analyzing_DSI/Email_doubles.ipynb
+++ b/Analyzing_DSI/Email_doubles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,23 +61,263 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>11/14/2018 18:31:59</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Data Science Wednesday 11/14 Fall 2018 (Respon...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>11/13/2018 18:29:54</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Statistics for Data Scientists Fall 2018 (Resp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>9/19/2018 18:34:44</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Data Science Wednesday Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>247</th>\n",
+       "      <td>10/15/2018 18:31:09</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>SQL Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>275</th>\n",
+       "      <td>10/17/2018 18:30:55</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>DSI GBM #2 Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>293</th>\n",
+       "      <td>10/10/2018 18:28:48</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>NLP Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>10/3/2018 18:31:27</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Data Science Wednesday 10/3 Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>344</th>\n",
+       "      <td>10/8/2018 18:33:02</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>I'm already on the listserv</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>Practical Data Science 10/8 Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>366</th>\n",
+       "      <td>9/12/2018 19:01:00</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>Computer Science</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>DSI GBM #1 Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>555</th>\n",
+       "      <td>9/17/2018 18:04:15</td>\n",
+       "      <td>hammackm@ufl.edu</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Mitchell</td>\n",
+       "      <td>Hammack</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>5 + years</td>\n",
+       "      <td>Technology (computer engineering, computer sci...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Facebook</td>\n",
+       "      <td>R0 Fall 2018 (Responses)</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Timestamp, Email Address, Do you want to receive updates about meetings, workshops, and other DSI events?, First Name, Last Name, Gender, Is this your first DSI event?, What year are you in?, How much prior coding experience do you have?, What subject best describes your current major or profession?, Optional: Write your full major name., How did you hear about us?, Workshop_Type]\n",
-       "Index: []"
+       "               Timestamp     Email Address  \\\n",
+       "7    11/14/2018 18:31:59  hammackm@ufl.edu   \n",
+       "24   11/13/2018 18:29:54  hammackm@ufl.edu   \n",
+       "145   9/19/2018 18:34:44  hammackm@ufl.edu   \n",
+       "247  10/15/2018 18:31:09  hammackm@ufl.edu   \n",
+       "275  10/17/2018 18:30:55  hammackm@ufl.edu   \n",
+       "293  10/10/2018 18:28:48  hammackm@ufl.edu   \n",
+       "318   10/3/2018 18:31:27  hammackm@ufl.edu   \n",
+       "344   10/8/2018 18:33:02  hammackm@ufl.edu   \n",
+       "366   9/12/2018 19:01:00  hammackm@ufl.edu   \n",
+       "555   9/17/2018 18:04:15  hammackm@ufl.edu   \n",
+       "\n",
+       "    Do you want to receive updates about meetings, workshops, and other DSI events?  \\\n",
+       "7                          I'm already on the listserv                                \n",
+       "24                         I'm already on the listserv                                \n",
+       "145                        I'm already on the listserv                                \n",
+       "247                        I'm already on the listserv                                \n",
+       "275                        I'm already on the listserv                                \n",
+       "293                        I'm already on the listserv                                \n",
+       "318                        I'm already on the listserv                                \n",
+       "344                        I'm already on the listserv                                \n",
+       "366                                                 No                                \n",
+       "555                                                Yes                                \n",
+       "\n",
+       "    First Name Last Name Gender Is this your first DSI event?  \\\n",
+       "7     Mitchell   Hammack   Male                            No   \n",
+       "24    Mitchell   Hammack   Male                            No   \n",
+       "145   Mitchell   Hammack   Male                            No   \n",
+       "247   Mitchell   Hammack   Male                            No   \n",
+       "275   Mitchell   Hammack   Male                            No   \n",
+       "293   Mitchell   Hammack   Male                            No   \n",
+       "318   Mitchell   Hammack   Male                            No   \n",
+       "344   Mitchell   Hammack   Male                            No   \n",
+       "366   Mitchell   Hammack   Male                           Yes   \n",
+       "555   Mitchell   Hammack   Male                            No   \n",
+       "\n",
+       "    What year are you in? How much prior coding experience do you have?  \\\n",
+       "7               Sophomore                                     5 + years   \n",
+       "24              Sophomore                                     5 + years   \n",
+       "145             Sophomore                                     5 + years   \n",
+       "247             Sophomore                                     5 + years   \n",
+       "275             Sophomore                                     5 + years   \n",
+       "293             Sophomore                                     5 + years   \n",
+       "318             Sophomore                                     5 + years   \n",
+       "344             Sophomore                                     5 + years   \n",
+       "366             Sophomore                                     5 + years   \n",
+       "555             Sophomore                                     5 + years   \n",
+       "\n",
+       "    What subject best describes your current major or profession?  \\\n",
+       "7    Technology (computer engineering, computer sci...              \n",
+       "24   Technology (computer engineering, computer sci...              \n",
+       "145  Technology (computer engineering, computer sci...              \n",
+       "247  Technology (computer engineering, computer sci...              \n",
+       "275  Technology (computer engineering, computer sci...              \n",
+       "293  Technology (computer engineering, computer sci...              \n",
+       "318  Technology (computer engineering, computer sci...              \n",
+       "344  Technology (computer engineering, computer sci...              \n",
+       "366  Technology (computer engineering, computer sci...              \n",
+       "555  Technology (computer engineering, computer sci...              \n",
+       "\n",
+       "    Optional: Write your full major name. How did you hear about us?  \\\n",
+       "7                                     NaN                   Facebook   \n",
+       "24                                    NaN                   Facebook   \n",
+       "145                      Computer Science                   Facebook   \n",
+       "247                                   NaN                   Facebook   \n",
+       "275                                   NaN                   Facebook   \n",
+       "293                                   NaN                   Facebook   \n",
+       "318                      Computer Science                   Facebook   \n",
+       "344                                   NaN                   Facebook   \n",
+       "366                      Computer Science                   Facebook   \n",
+       "555                                   NaN                   Facebook   \n",
+       "\n",
+       "                                         Workshop_Type  \n",
+       "7    Data Science Wednesday 11/14 Fall 2018 (Respon...  \n",
+       "24   Statistics for Data Scientists Fall 2018 (Resp...  \n",
+       "145       Data Science Wednesday Fall 2018 (Responses)  \n",
+       "247                          SQL Fall 2018 (Responses)  \n",
+       "275                   DSI GBM #2 Fall 2018 (Responses)  \n",
+       "293                          NLP Fall 2018 (Responses)  \n",
+       "318  Data Science Wednesday 10/3 Fall 2018 (Responses)  \n",
+       "344  Practical Data Science 10/8 Fall 2018 (Responses)  \n",
+       "366                   DSI GBM #1 Fall 2018 (Responses)  \n",
+       "555                           R0 Fall 2018 (Responses)  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df['Last Name'].str.upper() == \"GERHARDT\"]"
+    "df[df['Last Name'].str.upper() == \"HAMMACK\"]"
    ]
   },
   {
